--- a/passbolt_presentation.html
+++ b/passbolt_presentation.html
@@ -319,7 +319,7 @@
         <!-- Slide 1: Titre -->
         <div class="slide active title-slide">
             <div>
-                <img src="/Image1.png" alt="">
+                <img src="https://github.com/Bobodiouf/Mes-scripts-d-installation/blob/main/Image1.png?raw=true" alt="">
             </div><br><br><br>
             <h1>Étude comparative et déploiement d'un gestionnaire de mots de passe open source</h1>
             <div class="subtitle">KeePass VS PassBolt</div>
