--- a/passbolt_presentation.html
+++ b/passbolt_presentation.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="highlight-box">
-                <strong>Parcours :</strong> De l'analyse à la mise en œuvre, puis recommandations
+                <strong>Parcours d'étude :</strong> De l'analyse à la mise en œuvre, puis les recommandations des outils
             </div>
         </div>
         <!-- Slide 2: Contexte -->
@@ -87,7 +87,9 @@
             <div class="demo-section">
                 <h3>coffre-fort numérique pour équipes</h3>
                 <div class="screenshot-container">
-                    <img src="https://i.imgur.com/YourImageID12.png" alt="Terminal installation PassBolt" class="screenshot screenshot-large">
+                    <img src="keepassxc/collaboration.png" width="300"  alt="Terminal installation PassBolt" class="screenshot screenshot-large colabo">
+                    <img src="keepassxc/1.png" width="300"  alt="Terminal installation PassBolt" class="screenshot screenshot-large colabo">
+                    <img src="keepassxc/collaboration2.png" width="300"  alt="Terminal installation PassBolt" class="screenshot screenshot-large colabo">
                 </div>
                 <div class="image-caption">Installation PassBolt via terminal - Génération des clés JWT</div>
             </div>
